# Uniquis-Framework

./: CMakeLists.txt  License  License.txt  Readme.md
Materials/: Empty.material  Materials.register
Models/: Models.register
Project/Config/: Config.h  Config.in  TargetVer.h
Project/Macros/: Macros.h
Project/Precompiled Headers/: pch.h
Project/Resources/: Resources.h  Uniquis.rc
Shaders/Geometry Shaders/: GeometryShader.hlsl
res/Materials/: Empty.material  Materials.register
res/Models/: Models.register
res/Shaders/Geometry Shaders/: GeometryShader.hlsl
res/Shaders/Pixel Shaders/: D3D11Circle.hlsl  PixelShader.hlsl  TextShader.hlsl
res/Shaders/Vertex Shaders/: TextShader.hlsl  VertexShader.hlsl
res/Textures/: Textures.register
src/cpp/Application/Core/: Application.cpp  Entrypoint.cpp
src/cpp/Framework/Managers/Device Manager/Core/: DeviceManager.cpp
src/cpp/Framework/Managers/Device Manager/Toolkit/General/: Keyboard.cpp  Monitor.cpp  Mouse.cpp
src/cpp/Framework/Managers/Device Manager/Toolkit/Interfaces/: IDevice.cpp
src/cpp/Framework/Managers/Graphics Manager/Core/: GraphicsManager.cpp
src/cpp/Framework/Managers/Graphics Manager/Toolkit/DirectX 12/: BottomLevelAccelerationStructure.cpp  Camera.cpp  ClearValue.cpp  CommandAllocator.cpp  CommandList.cpp  CommandQueue.cpp  CommandQueueDesc.cpp  ConstantBuffer.cpp  DebugController.cpp  DepthBuffer.cpp  DescriptorHeap.cpp  DescriptorHeapDescription.cpp  DescriptorRange.cpp  Device.cpp  DirectX12.cpp  Factory.cpp  Fence.cpp  Flags.cpp  Font.cpp  FullscreenDesc.cpp  GeometryShader.cpp  Heap.cpp  HeapDescription.cpp  IBindable.cpp  IndexBuffer.cpp  Light.cpp  Mesh.cpp  ModeDesc.cpp  Model.cpp  ModelHeap.cpp  Object.cpp  PipelineState.cpp  PixelShader.cpp  RenderQueue.cpp  RenderTarget.cpp  RenderTargetView.cpp  Resource.cpp  ResourceDescription.cpp  RootConstants.cpp  RootDescriptorTable.cpp  (+21 more)
src/cpp/Framework/Managers/Graphics Manager/Toolkit/General/: Camera.cpp  Font.cpp  Object.cpp  Text.cpp  Transformation.cpp
src/cpp/Framework/Managers/Graphics Manager/Toolkit/Interfaces/: IGraphics.cpp
src/cpp/Framework/Managers/Network Manager/Core/: NetworkManager.cpp
src/cpp/Framework/Managers/Physics Manager/Core/: PhysicsManager.cpp
src/cpp/Framework/Managers/Window Manager/Core/: WindowManager.cpp
src/cpp/Framework/Managers/Window Manager/Toolkit/General/: Window.cpp  WindowClass.cpp
src/cpp/Toolkit/Geometry/: Box.cpp  CMakeLists.txt  Cube.cpp  IGeometry.cpp  Line.cpp  Point.cpp  Rectangle.cpp  Square.cpp  Triangle.cpp
src/cpp/Toolkit/Math/: Curve.cpp  Quaternion.cpp  Vector.cpp
src/cpp/Toolkit/Memory/: PartitionDescriptor.cpp
src/cpp/Toolkit/Time/: Timer.cpp
src/h/Application/Core/: Application.h
src/h/Framework/Include/: Include.h
src/h/Framework/Managers/Device Manager/Core/: DeviceManager.h
src/h/Framework/Managers/Device Manager/Toolkit/General/: Keyboard.h  Monitor.h  Mouse.h
src/h/Framework/Managers/Device Manager/Toolkit/Interfaces/: IDevice.h
src/h/Framework/Managers/Graphics Manager/Core/: GraphicsManager.h
src/h/Framework/Managers/Graphics Manager/Toolkit/DirectX 12/: BottomLevelAccelerationStructure.h  Camera.h  ClearValue.h  CommandAllocator.h  CommandList.h  CommandQueue.h  CommandQueueDesc.h  ConstantBuffer.h  DebugController.h  DepthBuffer.h  DescriptorHeap.h  DescriptorHeapDescription.h  DescriptorRange.h  Device.h  DirectX12.h  Factory.h  Fence.h  Flags.h  Font.h  FullscreenDesc.h  GeometryShader.h  Heap.h  HeapDescription.h  IBindable.h  Include.h  IndexBuffer.h  Light.h  Mesh.h  ModeDesc.h  Model.h  ModelHeap.h  Object.h  PipelineState.h  PixelShader.h  RenderQueue.h  RenderTarget.h  RenderTargetView.h  Resource.h  ResourceDescription.h  RootConstants.h  (+21 more)
src/h/Framework/Managers/Graphics Manager/Toolkit/General/: Camera.h  Font.h  Object.h  (+3 more)
src/h/Framework/Managers/Network Manager/Core/: NetworkManager.h
src/h/Framework/Managers/Window Manager/Core/: WindowManager.h
src/h/Framework/Managers/Window Manager/Toolkit/: Window.h  WindowClass.h
src/h/Toolkit/Geometry/: Box.h  Cube.h  IGeometry.h  Line.h  Point.h  Rectangle.h  Square.h  Triangle.h
src/h/Toolkit/Helper/: D3DX12.h
src/h/Toolkit/Include/: Include.h
src/h/Toolkit/Math/: Curve.h  Quaternion.h  Vector.h
src/h/Toolkit/Memory/: PartitionDescriptor.h
src/h/Toolkit/Time/: Timer.h
(+1 files in other folders)
